Enhance error handling and add test route in server.js
- Updated the `registerRoute` function to wrap handlers in try-catch blocks for improved error management.
- Introduced a new test route to verify routing functionality.
- Adjusted the fetch call in index.html to use the correct /otp-service prefix for the status endpoint.

--- a/public/index.html
+++ b/public/index.html
@@ -856,7 +856,7 @@
         async function checkStatus() {
             if (!isAuthenticated) return;
             try {
-                const res = await fetch('/status');
+                const res = await fetch('/otp-service/status');
                 const data = await res.json();
                 
                 updateStatusElement('statusReady', data.ready);
